project(pde)
include_directories("${CHASTE_PDE_INCLUDE_DIRS}" "${CHASTE_ODE_INCLUDE_DIRS}"
    "${CHASTE_MESH_INCLUDE_DIRS}" "${CHASTE_LINALG_INCLUDE_DIRS}"
    "${CHASTE_IO_INCLUDE_DIRS}"  "${CHASTE_GLOBAL_INCLUDE_DIRS}")
file(GLOB_RECURSE CHASTE_PDE_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.hpp)
add_library(pde STATIC ${CHASTE_PDE_SOURCES})
install(TARGETS pde DESTINATION lib)

#Component testing for pde
if(ENABLE_PDE_TESTING)
    add_subdirectory(test)
endif(ENABLE_PDE_TESTING)
